--- a/src/main/resources/fxml/mainView.fxml
+++ b/src/main/resources/fxml/mainView.fxml
@@ -6,18 +6,16 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeTableView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homeHubReader.HomeHubReaderController">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homeHubReader.HomeHubReaderController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -58,25 +56,29 @@
         </Menu>
       </menus>
     </MenuBar>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane>
+      <VBox VBox.vgrow="ALWAYS">
+         <children>
+            <HBox alignment="CENTER" spacing="10.0">
                <children>
-                  <Button fx:id="btnButton1" layoutX="29.0" layoutY="26.0" onAction="#onBtnButton1Clicked" prefHeight="40.0" prefWidth="165.0" text="Button 1" />
-                  <Button fx:id="btnButton2" layoutX="29.0" layoutY="84.0" onAction="#onBtnButton2Clicked" prefHeight="40.0" prefWidth="165.0" text="Button 2" />
+                  <TextField fx:id="tfFileChooser" editable="false" prefHeight="26.0" prefWidth="50.0" promptText="Choose File..." HBox.hgrow="ALWAYS" />
+                  <Button mnemonicParsing="false" onAction="#onBtnBrowseClicked" prefHeight="26.0" prefWidth="95.0" text="Browse..." />
+                  <Button fx:id="btnReadFile" disable="true" onAction="#onBtnReadFileClicked" prefHeight="40.0" prefWidth="165.0" text="Read File" />
                </children>
-        </AnchorPane>
-        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
-          <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0">
-                     <children>
-                        <TreeTableView fx:id="treeTableView" layoutX="41.0" layoutY="58.0" prefHeight="551.0" prefWidth="443.0" AnchorPane.bottomAnchor="-151.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-195.0" AnchorPane.topAnchor="0.0" />
-                     </children></AnchorPane>
-          </content>
-        </ScrollPane>
-        <AnchorPane />
-      </items>
-    </SplitPane>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </HBox>
+            <HBox spacing="30.0" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
+               </VBox.margin>
+               <children>
+                  <TreeTableView fx:id="ttvCategories" HBox.hgrow="ALWAYS" />
+                  <TreeTableView fx:id="ttvCustoms" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
     <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
       <children>
         <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
