--- a/src/main/resources/fxml/mainView.fxml
+++ b/src/main/resources/fxml/mainView.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homeHubReader.HomeHubReaderController">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homeHubReader.HomeHubReaderController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -56,7 +56,7 @@
         </Menu>
       </menus>
     </MenuBar>
-      <VBox VBox.vgrow="ALWAYS">
+      <VBox prefHeight="553.0" prefWidth="783.0" VBox.vgrow="ALWAYS">
          <children>
             <HBox alignment="CENTER" spacing="10.0">
                <children>
@@ -74,7 +74,6 @@
                </VBox.margin>
                <children>
                   <TreeTableView fx:id="ttvCategories" HBox.hgrow="ALWAYS" />
-                  <TreeTableView fx:id="ttvCustoms" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
          </children>
